--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -479,7 +479,7 @@ title: Title for FlowViewer
               - java.lang.String: 
                 - ↑value: '@types/jquery'
               - java.lang.String: 
-                - ↑value: 3.4.1
+                - ↑value: '>=3.4.1'
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.common.XMLVector
             - com.twinsoft.convertigo.beans.common.XMLVector: 
