set NODE_OPTIONS=--max_old_space_size=8192 for CircleCi build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     - checkout
     - run: |
         sed -i ~/.gitconfig -e s,github,none,
+        export NODE_OPTIONS=--max_old_space_size=8192
         sh gradlew --no-daemon --stacktrace --info deploy -Pconvertigo.deploy.server=$C8O_SERVER -Pconvertigo.deploy.user=$C8O_USER -Pconvertigo.deploy.password=$C8O_PASSWORD
 workflows:
   version: 2
