--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1.3.0
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Setup Java
+      uses: actions/setup-java@v1.3.0
       with:
         java-version: '11'
     - name: Run Convertigo build
-      run: sh gradlew --no-daemon --stacktrace --info deploy -Pconvertigo.deploy.server=$C8O_SERVER -Pconvertigo.deploy.user=$C8O_USER -Pconvertigo.deploy.password=$C8O_PASSWORD
+      env:
+        C8O_SERVER: ${{ secrets.C8O_SERVER }}
+        C8O_USER: ${{ secrets.C8O_USER }}
+        C8O_PASSWORD: ${{ secrets.C8O_PASSWORD }}
+      run: echo "Build C8oStudio and deploy to $C8O_SERVER" && sh gradlew --no-daemon --stacktrace --info deploy -Pconvertigo.deploy.server=$C8O_SERVER -Pconvertigo.deploy.user=$C8O_USER -Pconvertigo.deploy.password=$C8O_PASSWORD
