--- a/ionicTpl/tsconfig.app.json
+++ b/ionicTpl/tsconfig.app.json
@@ -2,9 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["node"],
-    "target": "es5",
-    "importHelpers": true
+    "types": ["node"]
   },
   "include": [
     "src/**/*.ts"
